Dockerfile edited for new binder instance

--- a/test-2-01-volume-LR.ipynb
+++ b/test-2-01-volume-LR.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Case 1: this script wants to plot the value of the vorticity field in three different plane at the appropriate depth at a time step.\n",
+    "Case 1: this script wants to plot the vorticity field in three different planes at the appropriate depth at a time step.\n",
     "------\n",
     "To characterize the induced flow dynamics we calculate the horizontal divergence and the vertical component of vorticity as:\n",
     "\n",
@@ -94,7 +94,7 @@
     "FiguresVisible = 'on';  # want to see the figures?\n",
     "\n",
     "# Base directory\n",
-    "main_directory    = ('/home/jovyan/workspace/3D-Post_Processing/')\n",
+    "main_directory    = ('/home/jovyan/3D-Post_Processing/')\n",
     "\n",
     "# Directory you wish to analise\n",
     "ndirs             = [14]\n",
