--- a/test-2-01-surfaces-LR.ipynb
+++ b/test-2-01-surfaces-LR.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Case 1: this script aims to plot the value of the vorticity field in three different plane at the appropriate depth at a time step.\n",
+    "Case 1: this script aims to plot the vorticity field in three different planes at the appropriate depth at a time step.\n",
     "------\n",
     "To characterize the induced flow dynamics we calculate the horizontal divergence and the vertical component of vorticity as:\n",
     "\n",
@@ -81,7 +81,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current directory:  /home/jovyan/workspace/3D-Post_Processing\n",
+      "Current directory:  /home/jovyan/3D-Post_Processing\n",
       "-----------------------------\n",
       "Start sampling the data:\n"
      ]
