edited volume script LR commit

--- a/test-2-01-volume-LR.ipynb
+++ b/test-2-01-volume-LR.ipynb
@@ -481,7 +481,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Proper problem"
+    "#Proper problem which seems to work in LR but plot shows nothing in air res"
    ]
   },
   {
@@ -491,12 +491,12 @@
    "outputs": [],
    "source": [
     "fig1 = go.Figure(data=go.Isosurface(   \n",
-    "    x=xcoords_reshaped.flatten(),\n",
-    "    y= zcorrds_reshaped.flatten(),\n",
-    "    z=ycoords_reshaped.flatten(),\n",
-    "    value=w_z_glob_reshaped .flatten(),\n",
-    "    isomin=0,\n",
-    "    isomax=50,\n",
+    "    x=x.flatten(),\n",
+    "    y=y.flatten(),\n",
+    "    z=z.flatten(),\n",
+    "    value=w_z_glob_reshaped.flatten(),\n",
+    "    #isomin=0,\n",
+    "    #isomax=50,\n",
     "    #surface_fill=0.4,\n",
     "    opacity=0.6,\n",
     "    coloraxis='coloraxis',\n",
